# ValorantDMScoringSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  player.cpp  player.h  team.cpp  team.h  teamDeathMatch.cpp  teamDeathMatch.h  test.cpp
.github/workflows/: build.yml
DSString/: dsstring.cpp  dsstring.h
testData/: 100thieves.txt  faze.txt  output.txt  output3.txt
testInputs/: 100thieves.txt
